trying to comment and run

--- a/databox-manifest.json
+++ b/databox-manifest.json
@@ -14,10 +14,31 @@
 		"json",
 		"timeseries"
 	],
-	"homepage": "https://github.com/ADHATARAO/app-pii.git",
+	"homepage": "https://github.com/minoskt/app-ancile",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/ADHATARAO/app-pii.git"
+		"url": "git+https://github.com/minoskt/app-ancile.git"
 	},
-        
+	"packages": [
+		{
+			"name": "Reddit Data",
+			"purpose": "To connect DataBox with AncileCore",
+			"install": "required",
+			"risks": "TBD",
+			"benefits": "Use Ancile for policy management.",
+			//"datastores": [ "redditSimulatorData" ]
+		}
+	],
+	"resource-requirements": {
+		"store": "core-store"
+	},
+	"datasources": [
+		{
+			"type": "redditSimulatorData",
+			"required": true,
+			"name": "redditSimulatorData",
+			"clientid": "redditSimulatorData",
+			"granularities": []
+		}
+	]
 }
