adding without datastore

--- a/databox-manifest.json
+++ b/databox-manifest.json
@@ -26,6 +26,7 @@
 			"install": "required",
 			"risks": "TBD",
 			"benefits": "Use Ancile for policy management.",
+			"datastores": [ "redditSimulatorData" ]
 		}
 	],
 	"resource-requirements": {
